@@ -222,6 +222,13 @@ namespace Taskmaster
 			}
 
 			Controller.AffinityIdeal = Convert.ToInt32(idealAffinity.Value) - 1;
+
+			if (Taskmaster.IOPriorityEnabled)
+			{
+				int iop = ioPriority?.SelectedIndex ?? -1;
+				Controller.IOPriority = iop > 0 ? 3 - iop : 0;
+			}
+
 			Controller.LogAdjusts = logAdjusts.Checked;
 
 			Controller.Enabled = newPrc ? true : enOrig;
@@ -253,6 +260,7 @@ namespace Taskmaster
 		NumericUpDown affinityMask = null;
 		NumericUpDown bgAffinityMask = null;
 		NumericUpDown idealAffinity = null;
+		ComboBox ioPriority = null;
 
 		ComboBox volumeMethod = null;
 		Extensions.NumericUpDownEx volume = null;
@@ -655,6 +663,8 @@ namespace Taskmaster
 			lt.Controls.Add(afflayout);
 			lt.Controls.Add(affbuttonpanel);
 
+			// EXPERIMENTS
+
 			idealAffinity = new NumericUpDown()
 			{
 				Width = 80,
@@ -664,9 +674,27 @@ namespace Taskmaster
 			};
 			tooltip.SetToolTip(idealAffinity, "EXPERIMENTAL\nTell the OS to favor this particular core for the primary thread.\nMay not have any perceivable effect.\n0 disables this feature.");
 
-			lt.Controls.Add(new Label() { Text = "Ideal affinity", TextAlign = System.Drawing.ContentAlignment.MiddleLeft });
+			lt.Controls.Add(new Label() { Text = "Ideal affinity", TextAlign = System.Drawing.ContentAlignment.MiddleLeft, ForeColor = System.Drawing.Color.Red });
 			lt.Controls.Add(idealAffinity);
-			lt.Controls.Add(new Label()); // empty
+			lt.Controls.Add(new Label() { Text = "EXPERIMENTAL", TextAlign = System.Drawing.ContentAlignment.MiddleLeft, ForeColor = System.Drawing.Color.Red });
+
+			if (Taskmaster.IOPriorityEnabled)
+			{
+				int iop = Controller.IOPriority;
+				ioPriority = new ComboBox()
+				{
+					DropDownStyle = ComboBoxStyle.DropDownList,
+					Items = { "Ignore", "Normal", "Low", "Background" },
+					SelectedIndex = iop < 0 ? 0 : (3 - iop),
+					AutoSize = true,
+					Dock = DockStyle.Fill,
+				};
+				tooltip.SetToolTip(ioPriority, "EXPERIMENTAL\nDO NOT SET BACKGROUND FOR ANYTHING WITH USER INTERFACE\nAffects HDD/SSD access and Networking\nNormal is the default.\nBackground is for things that do not interact with user.");
+
+				lt.Controls.Add(new Label() { Text = "I/O priority", TextAlign = System.Drawing.ContentAlignment.MiddleLeft, ForeColor = System.Drawing.Color.Red });
+				lt.Controls.Add(ioPriority);
+				lt.Controls.Add(new Label() { Text = "EXPERIMENTAL", TextAlign = System.Drawing.ContentAlignment.MiddleLeft, ForeColor = System.Drawing.Color.Red });
+			}
 
 			// ---------------------------------------------------------------------------------------------------------
 
@@ -997,6 +1025,9 @@ namespace Taskmaster
 					sbs.Append("Affinity ideal is not within defined affinity.").AppendLine();
 				}
 			}
+
+			if (ioPriority != null && ioPriority.SelectedIndex != 0)
+				sbs.Append("Warning: I/O priority set! Be certain of what you're doing!").AppendLine();
 
 			SimpleMessageBox.ShowModal("Validation results", sbs.ToString(), SimpleMessageBox.Buttons.OK);
 		}
